# ai-agent-playbook

./: .gitattributes  .gitignore  AGENTS.md  CONTEXT.md  LICENSE  README.md  install.ps1  package.json  pyproject.toml  tsconfig.json  update.ps1
.github/: pull_request_template.md  release.yml
docs/: capability-taxonomy.md  classification.md  commands.md  harness-os.md  harness-runtime.md  installation.md  lifecycle.md  maintenance.md  mcp-permission-model.md  playbook-layout-v2.md  publishing-checklist.md  quick-start.md  reference-adoption.md  runtime-roadmap.md  skill-catalog.md  skill-taxonomy-v2.md  structured-playbook-layout.md  superpowers-integration.md  translation-policy.md
scripts/: bootstrap-python.ps1  sync-skills.ps1  validate-mcp-docs.ps1  validate-naming.ps1  validate-public-docs.ps1  validate-python.ps1  validate-skills.ps1  validate-translations.ps1  validate.mjs
src/: adapter-readiness.mjs  cli.mjs  deep-analysis.mjs  harness.mjs  mcp-server.mjs  mcp-tools.mjs  operator-diagnostics.mjs  skills-lifecycle.mjs  version.mjs
templates/: README.md
test/: adapter-shell.test.mjs  adapters.test.mjs  automation-cli.test.mjs  automation-controller.test.mjs  automation-doctor.test.mjs  automation-legacy-compat.test.mjs  automation-plan.test.mjs  automation-policy.test.mjs  automation-state.test.mjs  cli.test.mjs  config.test.mjs  doctor-public-safety.test.mjs  executors.test.mjs  forge-apply.test.mjs  forge-hierarchy.test.mjs  forge-http.test.mjs  forge-presentation-reconcile.test.mjs  forge-queue.test.mjs  forge.test.mjs  git-delivery.test.mjs  (+10 more)
(+1050 files in other folders)
