[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agent-playbook-engine"
version = "0.1.0"
description = "Optional Python capability engines for ai-agent-playbook."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ai-agent-playbook maintainers" }]
dependencies = []

[project.optional-dependencies]
ko = [
  "kss>=6.0.0",
  "kiwipiepy>=0.20.0"
]
analysis = []

[tool.setuptools]
package-dir = { "" = "engines/python" }

[tool.setuptools.packages.find]
where = ["engines/python"]
